force-app/main/default/objects/Discount__c/fields/Net_Discount__c.field-meta.xml
<CustomField>
    <fullName>Net_Discount__c</fullName>
    <formula>IF(
    ISPICKVAL( Discount_Category__c , &quot;Early Reservation&quot;), 0.15,
    IF(
        ISPICKVAL(Discount_Category__c, &quot;Group Discount&quot;), 0.20,
        IF(
            ISPICKVAL(Discount_Category__c, &quot;Premium Member&quot;), 0.30,
            0.10
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>