force-app/main/default/objects/Discount__c/fields/Pproved__c.field-meta.xml
<CustomField>
    <fullName>Pproved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pproved</label>
    <type>Checkbox</type>
</CustomField>