force-app/main/default/objects/Discount__c/fields/Remarks_by_Approver__c.field-meta.xml
<CustomField>
    <fullName>Remarks_by_Approver__c</fullName>
    <description>Read only by office team</description>
    <label>Remarks by Approver</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>