force-app/main/default/objects/Discount__c/fields/Used__c.field-meta.xml
<CustomField>
    <fullName>Used__c</fullName>
    <defaultValue>false</defaultValue>
    <description>trigger will make it true</description>
    <label>Used</label>
    <type>Checkbox</type>
</CustomField>