force-app/main/default/objects/Discount__c/validationRules/Discount_Amount_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Discount_Amount_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>Discount_Amount__c  &gt;=  Opportunity__r.Total_Amount__c</errorConditionFormula>
    <errorMessage>Discount amount can’t exceed the total amount of the opportunity.</errorMessage>
</ValidationRule>